Feat: Built the sales service
